...
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/confirm" />

    <TextView
        android:id="@+id/end_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meeting_title_input" />

    <TextView
        android:id="@+id/start_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
...
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/meeting_title_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:layout_marginTop="35dp"
        android:hint="Meeting Title"
        android:textColorHint="@drawable/text_box_stroke_color"
        app:boxStrokeColor="@drawable/text_box_stroke_color"
        app:errorEnabled="true"
        app:hintTextColor="@drawable/text_box_stroke_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/meeting_title_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/payment_offer_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:layout_marginTop="35dp"
        android:hint="Payment Offer"
        android:textColorHint="@drawable/text_box_stroke_color"
...
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/payment_offer_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/start_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.748"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meeting_title_input" />

    <TextView
        android:id="@+id/end_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.748"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meeting_title_input" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/book_meeting_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="133dp"
        android:text="@string/confirm_request_text"
        app:layout_constraintBottom_toBottomOf="parent"
...
