<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/calendar_activity"
        android:enabled="true"
        android:icon="@drawable/ic_today_fill0_wght400_grad0_opsz48"
        android:title="@string/calendar" />
    <item
        android:id="@+id/view_stats_activity"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/view_stats" />

    <item
        android:id="@+id/sign_out_activity"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/profile" />

</menu>
